added shuffle and made graph sorted in beginning

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="header">
             <nav>
                 <ul>
-                    <li><button class="new">New Array</button></li>
+                    <li><button class="new">Shuffle</button></li>
                     <div class="method">
                         <li>Sorting Method</li>
                         <select id="method">
@@ -27,7 +27,7 @@
                             type="range"
                             id="length"
                             min="1"
-                            max="64"
+                            max="58"
                             value="25"
                         />
                         <span id="lenDisplay">25</span>
